--- a/src/scss/sections/_projects.scss
+++ b/src/scss/sections/_projects.scss
@@ -29,7 +29,7 @@
   &-container {
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    gap: 10rem;
     .project {
       position: relative;
       display: flex;
@@ -58,7 +58,7 @@
           position: absolute;
           width: 100%;
           height: 100%;
-          background-color: #64ffdb48;
+          background-color: rgba(57, 53, 58, 0.592);
         }
         img {
           z-index: 0;
