--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -1,5 +1,6 @@
 .about {
-  margin: 15rem 0;
+  padding-top: 8.5rem;
+  margin: 0rem 0;
   .title {
     font-family: var(--raleway);
     color: var(--lightest-slate);
