--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -1,6 +1,7 @@
 .contact {
+  padding-top: 8.5rem;
   max-width: 700px;
-  margin: 15rem auto;
+  margin: 10rem auto;
   display: flex;
   gap: 1rem;
   justify-content: center;
