--- a/src/scss/sections/_expereince.scss
+++ b/src/scss/sections/_expereince.scss
@@ -1,6 +1,7 @@
 .experience {
-  margin: 15rem auto;
+  margin: 0rem auto;
   max-width: 700px;
+  padding-top: 8.5rem;
   .title {
     font-family: var(--raleway);
     color: var(--lightest-slate);
