--- a/src/scss/sections/_projects.scss
+++ b/src/scss/sections/_projects.scss
@@ -54,17 +54,22 @@
           }
         }
         &-overlay {
-          transition: 0.3s ease-in-out;
+          transition: 0.5s ease-in-out;
           z-index: 1;
           position: absolute;
           width: 100%;
           height: 100%;
-          background-color: rgba(57, 53, 58, 0.592);
+          background: rgba(10, 25, 47, 0.575);
+          border-radius: 16px;
         }
         img {
           z-index: 0;
-          filter: grayscale(100%);
-          transition: 0.3s ease-in-out;
+          /* From https://css.glass */
+          border-radius: 16px;
+          box-shadow: 0 0px 25px rgba(100, 255, 218, 0.171);
+          backdrop-filter: blur(12.1px);
+          -webkit-backdrop-filter: blur(12.1px);
+          transition: 0.5s ease-in-out;
         }
       }
       &-info {
@@ -85,10 +90,15 @@
           font-family: var(--raleway);
           cursor: pointer;
           transition: 0.3s ease-in-out;
+        
+          /* Remover a decoração de link */
+          text-decoration: none;
+        
           &:hover {
             color: var(--theme-color);
           }
         }
+        
         &-description {
           background-color: var(--light-navy);
           border-radius: 0.2rem;
